postgres-macros/tests/fail-stable/enum_array_to_enum_literal.stderr
error[E0271]: type mismatch resolving `<Role as SqlType>::Type == Vec<Enum<(EnumVariant<10465144470622129318>, EnumVariant<5755620910692865178>)>>`
  --> tests/fail-stable/enum_array_to_enum_literal.rs:17:10
   |
17 |         .await
   |          ^^^^^ expected `Enum<(..., ...)>`, found `Vec<Enum<(..., ...)>>`
   |
   = note: expected struct `sqlm_postgres::types::Enum<_>`
              found struct `Vec<sqlm_postgres::types::Enum<_>>`
   = note: required for `Sql<'_, Literal<Vec<sqlm_postgres::types::Enum<(EnumVariant<10465144470622129318>, EnumVariant<5755620910692865178>)>>>, Role>` to implement `IntoFuture`
